--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
+    "@types/qrcode": "^1.5.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -42,6 +43,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "peer": "^1.0.0",
+    "qrcode": "^1.5.3",
     "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
   }
