--- a/package.json
+++ b/package.json
@@ -11,17 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
     "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^20.4.5",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.2",
     "dotenv-flow": "^3.2.0",
-    "nodemon": "^3.0.1",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
-  "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/ejs": "^3.1.2",
@@ -47,6 +44,9 @@
     "peer": "^1.0.0",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
