--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon --watch \"src/**\" --ext \"ts\" --exec \"npx tsc && node dist/index.js\"",
-    "twdev": "npx tailwindcss -i ./src/input.css -o ./public/twoutput.css --watch"
+    "twdev": "npx tailwindcss -i ./src/input.css -o ./public/twoutput.css --watch",
+    "compile": "npx tsc",
+    "twcompile": "npx tailwindcss -i ./src/input.css -o ./public/twoutput.css --minify"
   },
   "type": "commonjs",
   "author": "",
