--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "@types/dotenv-flow": "^3.2.0",
-    "@types/node": "^20.4.5",
-    "@types/socket.io": "^3.0.2",
-    "@types/uuid": "^9.0.2",
-    "dotenv-flow": "^3.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
+    "@types/node": "^20.4.5",
     "@types/nodemailer": "^6.4.9",
     "@types/qrcode": "^1.5.1",
+    "@types/socket.io": "^3.0.2",
+    "@types/uuid": "^9.0.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.13",
+    "dotenv-flow": "^3.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.1",
     "jwt-promisify": "^1.1.7",
     "knex": "^2.5.1",
@@ -46,9 +47,9 @@
     "peer": "^1.0.0",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.1",
-    "uuid": "^9.0.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
