--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 /node_modules
 /public/uploads/interpreters/**/*
 /public/uploads/organizations/**/*
+/public/uploads/session_recordings/**/*
 
 !/public/uploads/interpreters/.gitkeep
 !/public/uploads/organizations/.gitkeep
+!/public/uploads/session_recordings/.gitkeep
 
 /dist/**/*
 
